force-app/main/default/objects/PS_Document_Details__c/PS_Document_Details__c.object-meta.xml
<CustomObject>
    <label>PS_Document_Details</label>
    <nameField>
        <label>PS_Document_Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Document_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>