force-app/main/default/objects/PS_Document_Details__c/fields/NumVal1__c.field-meta.xml
<CustomField>
    <fullName>NumVal1__c</fullName>
    <label>NumVal1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>