force-app/main/default/objects/PS_Document_Details__c/fields/SubGroup__c.field-meta.xml
<CustomField>
    <fullName>SubGroup__c</fullName>
    <label>SubGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>